welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:18: error: illegal start of simple expression
}
^Program:21: error: 'while' expected but '}' found.
}
^